--- a/style/style.css
+++ b/style/style.css
@@ -18,17 +18,15 @@ header {
     margin: 0 0 0 200px;
     width: 1420px;
     display: inline-flex;
-    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .content_container {
-    margin: 50px 90px 0px 90px;
-    width: 200px;
-    height: 350px;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+    margin: 50px 0px 0px 210px;
+    width: 1000px;
+    min-height: 300px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 .content_text {
@@ -37,8 +35,15 @@ header {
     font-weight: bold;
     color: white;
     text-align: center;
+    margin: 22px 0px 0px 0px;
 }
 
 .content_image {
-    width: 500px;
+    height: 110px;
+    width: 1000px;
+}
+
+.content--real--text {
+    font-weight: 500;
+    text-align: center;
 }
