--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body {
+    background-color:rgb(223, 240, 125);
     font-family: 'Robot', sans-serif;
     margin: 0;
 }
-
 header {
     position: relative;
     margin: 0;
@@ -65,7 +65,7 @@ header {
 }
 
 .link--space {
-    margin: 0px 500px 0px 500px;
+    margin: 0px 200px 0px 200px;
     display: flex;
     justify-content: center;
     flex-direction: row;
